--- a/MI_Homework5_Curiosity.ipynb
+++ b/MI_Homework5_Curiosity.ipynb
@@ -44251,7 +44251,7 @@
         "id": "RUjaT5EzACTO"
       },
       "source": [
-        "We do see that e-greedy outperformed both bounded agents as predicted. However, b-ran and b-seq perform pretty much the same which is not that surprising. Both are exploratory agents with the same bound and previous simulations from Lab 4 suggest they either perform the same or one is very slightly better than the other -- it might partially just be due to luck."
+        "We don't really see a clear winner in this case -- the results show all three agents performed basically the same in this environment unlike predictions. Since epsilon of egreedy is very close to 0, it may have struggled with adapting to the decreasing value of the optimal arm. However, since it performs better than the other 2 when the environment is non-deceptive, it still managed to perform similarly to the other two. The other two agents are both exploratory agents with the same bound so it makes sense that they performed similiarly."
       ]
     },
     {
@@ -44271,7 +44271,7 @@
         "id": "lRwVJbGoPy88"
       },
       "source": [
-        "There was a clear winner among my three selected agents in both the non-deceptive and deceptive bandits: E-greedy/CriticUCB. It consistently performed better than BoundedRandom/CriticUCB and BoundedSequential/CriticNovelty in each type of bandit. The bounded agents performed similiarly in both environments. I would pick E-greedy/CriticUCB as my favorite. "
+        "There was a clear winner among my three selected agents in the non-deceptive but not deceptive bandit: E-greedy/CriticUCB in former, all performed similiarly in latter. Still, I would pick E-greedy/CriticUCB as my favorite since it does perform better in the non-deceptive bandit and it is learning from the environment rather than just exploring at random or in a sequential fashion (more suitable to adapting to env). "
       ]
     },
     {
