--- a/MI_Homework5_Curiosity.ipynb
+++ b/MI_Homework5_Curiosity.ipynb
@@ -44251,7 +44251,7 @@
         "id": "RUjaT5EzACTO"
       },
       "source": [
-        "We don't really see a clear winner in this case -- the results show all three agents performed basically the same in this environment unlike predictions. Since epsilon of egreedy is very close to 0, it may have struggled with adapting to the decreasing value of the optimal arm. However, since it performs better than the other 2 when the environment is non-deceptive, it still managed to perform similarly to the other two. The other two agents are both exploratory agents with the same bound so it makes sense that they performed similiarly."
+        "We don't really see a clear winner in this case -- the results show all three agents performed basically the same in this environment unlike predictions. Since epsilon of egreedy is very close to 0, it may have struggled with adapting to the decreasing value of the optimal arm (since it would exploit more rather than explore). However, since it performs better than the other 2 when the environment is non-deceptive, it still managed to perform similarly to the other two. The other two agents are both exploratory agents with the same bound so it makes sense that they performed similiarly."
       ]
     },
     {
