--- a/MI_project.ipynb
+++ b/MI_project.ipynb
@@ -8263,7 +8263,7 @@
         "\n",
         "where \\alpha is the learning rate (rate at which learning happens over time). $Q$ is trying to approximate the average reward value of each arm. \n",
         "\n",
-        "Tradtionally, Q learning has been examined in the context of an $n$-armed bandit task. In this task, there are $n$ actions to take. Each returns a reward $R$, with some probability $p$. The reward value is either a 1 or a 0. This means the expected value of each arm is its probability of reward. Generally, there are is one optimal choice/arm that leads to rewards more often than the other arms (e.g., has higher probability of reward).\n",
+        "Tradtionally, Q learning has been examined in the context of an $n$-armed bandit task. In this task, there are $n$ actions to take. Each returns a reward $R$, with some probability $p$. The reward value is either a 1 or a 0. This means the expected value of each arm is its probability of reward. Generally, there is one optimal choice/arm that leads to rewards more often than the other arms (e.g., has higher probability of reward).\n",
         "\n",
         "Q learning is usually examined in the context of an $n$-armed bandit task where the reward probabilities of each arm are static. That is, they remain the same throughout the simulation. The primary goal of this project is to examine Q learning in the context of a changing environment: an $n$-armed bandit task where the reward probabilities of each arm are changing. The secondary goal of this project is to compare how different agents perform in a changing environment. \n",
         "\n",
@@ -8344,7 +8344,7 @@
         "!pip install --upgrade git+https://github.com/mivantec/explorationlib\n",
         "!pip install --upgrade git+https://github.com/MattChanTK/gym-maze.git"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8447,7 +8447,7 @@
         "from explorationlib.plot import plot_bandit_critic\n",
         "from explorationlib.plot import plot_bandit_hist"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8488,7 +8488,7 @@
         "%load_ext autoreload\n",
         "%autoreload 2"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8522,7 +8522,7 @@
         "# Plot env\n",
         "plot_bandit(env, alpha=0.6) #graph of probability distribution of each arm"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8582,7 +8582,7 @@
         "names = [\"exploit\", \"egreedy\", \"random\"]\n",
         "colors = [\"blue\", \"purple\", \"green\"]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8659,7 +8659,7 @@
         "    )\n",
         "    results.append(log)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8771,7 +8771,7 @@
         "plt.tight_layout()\n",
         "sns.despine()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8863,7 +8863,7 @@
         "env = BanditChange4(num_change=num_change)\n",
         "env.seed(seed_value)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8890,7 +8890,7 @@
       "source": [
         "plot_bandit(env.orginal, alpha=0.6, title=\"Original\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8932,7 +8932,7 @@
       "source": [
         "plot_bandit(env.change, alpha=0.6, title=\"Change\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9021,7 +9021,7 @@
         "    )\n",
         "    results.append(log)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9133,7 +9133,7 @@
         "plt.tight_layout()\n",
         "sns.despine()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9228,7 +9228,7 @@
         "        figsize=(6,2)\n",
         "    )"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9329,7 +9329,7 @@
         "env = BanditGradualChange41(num_change=num_change)\n",
         "env.seed(seed_value)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9403,7 +9403,7 @@
         "    )\n",
         "    results.append(log)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9515,7 +9515,7 @@
         "plt.tight_layout()\n",
         "sns.despine()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9607,7 +9607,7 @@
         "env = BanditGradualChange42(num_change=num_change)\n",
         "env.seed(seed_value)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9681,7 +9681,7 @@
         "    )\n",
         "    results.append(log)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9793,7 +9793,7 @@
         "plt.tight_layout()\n",
         "sns.despine()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
