--- a/MI_project.ipynb
+++ b/MI_project.ipynb
@@ -8265,7 +8265,7 @@
         "\n",
         "Tradtionally, Q learning has been examined in the context of an $n$-armed bandit task. In this task, there are $n$ actions to take. Each returns a reward $R$, with some probability $p$. The reward value is either a 1 or a 0. This means the expected value of each arm is its probability of reward. Generally, there is one optimal choice/arm that leads to rewards more often than the other arms (e.g., has higher probability of reward).\n",
         "\n",
-        "Q learning is usually examined in the context of an $n$-armed bandit task where the reward probabilities of each arm are static. That is, they remain the same throughout the simulation. The primary goal of this project is to examine Q learning in the context of a changing environment: an $n$-armed bandit task where the reward probabilities of each arm are changing. The secondary goal of this project is to compare how different agents perform in a changing environment. \n",
+        "Q learning is usually examined in the context of an $n$-armed bandit task where the reward probabilities of each arm are static. That is, they remain the same throughout the simulation. The primary goal of this project is to examine Q learning in the context of a changing environment: an $n$-armed bandit task where the reward probability of the optimal arm is changing. The secondary goal of this project is to compare how different agents perform in a changing environment. \n",
         "\n",
         "## Agents\n",
         "The exploration strategies/agents are as follows:\n",
