--- a/MI_project.ipynb
+++ b/MI_project.ipynb
@@ -9873,7 +9873,7 @@
       "source": [
         "### Section Conclusions\n",
         "\n",
-        "Comparing between the total reward plots for the gradually changing environments and the static environment, we see that the egreedy and random agents performed worse in the gradual environments compared to the static environment (egreedy, random: 70, 160; 80 and 100 compared to 160 and 140), while the exploit agent performed better in both gradually changing environments than it did in the static environment (180 and 170 compared to 160). This is in contrast to what was seen for its performance in the suddenly changing environment (where it performed worse than both other agents), suggesting it may be better suited for gradually changing environments than the other two agents.\n"
+        "Comparing between the total reward plots for the gradually changing environments and the static environment, we see that the egreedy and random agents performed worse in the gradual environments compared to the static environment (egreedy, random: 70, 80 (gradual 1); 160, 100 (gradual 2) compared to 160 and 140), while the exploit agent performed better in both gradually changing environments than it did in the static environment (180 and 170 compared to 160). This is in contrast to what was seen for its performance in the suddenly changing environment (where it performed worse than both other agents), suggesting it may be better suited for gradually changing environments than the other two agents.\n"
       ]
     },
     {
